service.yml
apiVersion: v1
kind: Service
metadata:
  name: justa
  namespace: justa-teste
spec:
  type: ClusterIP
  ports:
    - port: 9000
  selector:
    app: justa
